fix layout issues on compose

--- a/static/components/component-manager/component-manager.css
+++ b/static/components/component-manager/component-manager.css
@@ -3,6 +3,7 @@
     width: 100%;
     height: 100%;
     grid-template-columns: 20rem 1fr;
+    grid-template-rows: minmax(0, 1fr);
     box-sizing: border-box;
     border-width: 0;
     outline: none;
