--- a/static/components/compose-test/compose-test.css
+++ b/static/components/compose-test/compose-test.css
@@ -2,7 +2,7 @@
     display: grid;
     width: 100%;
     height: 100%;
-    grid-template-rows: 3rem 1fr auto;
+    grid-template-rows: 3rem minmax(0, 1fr) auto;
 }
 
 split-view {
@@ -17,6 +17,8 @@ split-view {
 }
 
 .left, .right {
+    width: 100%;
+    height: 100%;
     overflow: auto;
 }
 
